fix: align videos horizontal again
But this commit temporarily disables the zoom function

--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -1,15 +1,20 @@
 .video-container {
-    position: relative;
+    /*position: relative;*/
+    display: inline-block;
+    /*float: left;*/
+    width: 15%;
 }
 
 .video-container video {
-    position: relative;
+    /*position: relative;*/
     z-index: 0;
+    width: 100%;
 }
 
 .video-overlay {
-    position: relative;
-    top: 0;
-    left: 0;
+    font-size: 200%;
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 0;*/
     z-index: 1;
 }
